--- a/app/views/customer/registrations/edit.html.erb
+++ b/app/views/customer/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="mb-6 text-center">
   <span class="text-3xl font-bold">
-    Edit Profile
+    ユーザー情報編集
   </span>
 </div>
 
@@ -39,7 +39,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Update Profile", class: "inline-flex w-full items-center justify-center rounded-md bg-indigo-500 p-3 text-white duration-100 ease-in-out hover:bg-indigo-600 focus:outline-none" %>
+      <%= f.submit "更新", class: "inline-flex w-full items-center justify-center rounded-md bg-indigo-500 p-3 text-white duration-100 ease-in-out hover:bg-indigo-600 focus:outline-none" %>
     </div>
   <% end %>
 </div>
