--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ecommerce</title>
+    <title>Izumitani liquor</title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -28,7 +28,7 @@
         <div class='mx-auto flex w-full flex-wrap items-center'>
           <div class='flex w-full justify-center font-extrabold text-white lg:w-1/2 lg:justify-start'>
             <%= link_to root_path, class: "text-2xl text-gray-900 no-underline hover:text-gray-900 hover:no-underline" do %>
-              🛍️ &nbsp; <span class=' text-gray-200'>ECommerce</span>
+              🛍️ &nbsp; <span class=' text-gray-200'>Izumitani liquor</span>
             <% end %>
           </div>
           <div class='flex w-full content-center justify-between pt-2 lg:w-1/2 lg:justify-end lg:pt-0'>
